--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -11,7 +11,8 @@
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
     <!-- TODO #3 - Use the same list display from search.html -->
-    <table th:replace = "search :: listDisplay"></table>
+    <span>1</span>
+    <div th:replace = "search :: listDisplay">1</div>
 
 </div>
 
